--- a/profile.html
+++ b/profile.html
@@ -79,26 +79,26 @@
     </div>	
     <div id="div4" class="div4">
     <P>html+css</P>
-    <a href="">任务一：零基础HTML编码</a>
-    <a href="">任务二：零基础HTML及CSS编码（一）</a>
-    <a href="">任务三：三栏式布局</a>
-    <a href="">任务四：定位和居中问题</a>
-    <a href="">任务五：零基础HTML及CSS编码（二）</a>
-    <a href="">任务六：通过HTML及CSS模拟报纸排版</a>
-    <a href="">任务七：实现常见的技术产品官网的页面架构及样式布局</a>
-    <a href="">任务八：响应式网格（栅格化）布局</a>
-    <a href="">任务九：使用HTML/CSS实现一个复杂页面</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text1.html">任务一：零基础HTML编码</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text2.html">任务二：零基础HTML及CSS编码（一）</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text3.html">任务三：三栏式布局</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text4.html">任务四：定位和居中问题</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text5.html">任务五：零基础HTML及CSS编码（二）</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text6.html">任务六：通过HTML及CSS模拟报纸排版</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text7.html">任务七：实现常见的技术产品官网的页面架构及样式布局</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text8.html">任务八：响应式网格（栅格化）布局</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/text9.html">任务九：使用HTML/CSS实现一个复杂页面</a>
     <p>js</p>
-    <a href="">任务一：零基础JavaScript编码（一）</a>
-    <a href="">任务二：零基础JavaScript编码（二）</a>
-    <a href="">任务三：零基础JavaScript编码（三）</a>
-    <a href="">任务四：基础JavaScript练习（一）</a>
-    <a href="">任务五：基础JavaScript练习（二）</a>
-    <a href="">任务六：基础JavaScript练习（三）</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/js-1.html">任务一：零基础JavaScript编码（一）</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/js-2.html">任务二：零基础JavaScript编码（二）</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/js-3.html">任务三：零基础JavaScript编码（三）</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/js-4.html">任务四：基础JavaScript练习（一）</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/js-5.html">任务五：基础JavaScript练习（二）</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/js-6.html">任务六：基础JavaScript练习（三）</a>
     <p>综合</p>
-    <a href="">任务一：表单（一）单个表单项的检验</a>
-    <a href="">任务二：表单（二）多个表单项的动态校验</a>
-    <a href="">任务三：表单（三）联动</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/textHCJ-1.html">任务一：表单（一）单个表单项的检验</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/textHCJ-2.html">任务二：表单（二）多个表单项的动态校验</a>
+    <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/textHCJ-3.html">任务三：表单（三）联动</a>
     </div>
     <div id="div5" class="div5">    
     <a href="https://github.com/front-thinking/FE-Summary/blob/master/1.html.md">1.前端知识点总结（HTML篇）</a>
