--- a/profile.html
+++ b/profile.html
@@ -104,7 +104,7 @@
     <a href="https://github.com/front-thinking/FE-Summary/blob/master/1.html.md">1.前端知识点总结（HTML篇）</a>
     <a href="https://github.com/front-thinking/FE-Summary/blob/master/2.css.md">2.前端知识点总结（CSS篇）</a>
     <a href="https://github.com/front-thinking/FE-Summary/blob/master/3.javascript.md">3.前端知识点总结（JavaScript篇）</a>
-    <a href="https://github.com/front-thinking/FE-Summary/blob/master/3.javascript.md">4.前端知识点总结（综合篇）</a>
+    <a href="https://github.com/front-thinking/FE-Summary/blob/master/4.%E7%BB%BC%E5%90%88.md">4.前端知识点总结（综合篇）</a>
     </div>
     </section>    
     <script src="profile.js"></script>	
