--- a/profile.html
+++ b/profile.html
@@ -101,10 +101,10 @@
     <a href="https://htmlpreview.github.io/?https://github.com/gary375175432/IFE-2017/blob/master/textHCJ-3.html">任务三：表单（三）联动</a>
     </div>
     <div id="div5" class="div5">    
-    <a href="https://github.com/front-thinking/FE-Summary/blob/master/1.html.md">1.前端知识点总结（HTML篇）</a>
-    <a href="https://github.com/front-thinking/FE-Summary/blob/master/2.css.md">2.前端知识点总结（CSS篇）</a>
-    <a href="https://github.com/front-thinking/FE-Summary/blob/master/3.javascript.md">3.前端知识点总结（JavaScript篇）</a>
-    <a href="https://github.com/front-thinking/FE-Summary/blob/master/4.%E7%BB%BC%E5%90%88.md">4.前端知识点总结（综合篇）</a>
+    <a href="https://github.com/gary375175432/FE-Summary/blob/master/1.html.md">1.前端知识点总结（HTML篇）</a>
+    <a href="https://github.com/gary375175432/FE-Summary/blob/master/2.css.md.md">2.前端知识点总结（CSS篇）</a>
+    <a href="https://github.com/gary375175432/FE-Summary/blob/master/3.javascript.md">3.前端知识点总结（JavaScript篇）</a>
+    <a href="https://github.com/gary375175432/FE-Summary/blob/master/4.%E7%BB%BC%E5%90%88.md">4.前端知识点总结（综合篇）</a>
     </div>
     </section>    
     <script src="profile.js"></script>	
